fix: avatar upload error - fix UPLOAD_DIR path (C: not E:), rewrite ProfileServlet with NIO Files.copy, fix avatar display in profile.jsp